--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "author": "ryu ji hye",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
   }
